--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,37 +1,37 @@
 <resources>
     <string name="app_name">AudioPlayer</string>
-    <string name="app_title">音频播放器</string>
+    <string name="app_title">Audio Player</string>
     
     <!-- Button Labels -->
-    <string name="play">播放</string>
-    <string name="stop">停止</string>
-    <string name="audio_config">配置: 默认配置</string>
-    <string name="audio_config_format">配置: %s</string>
+    <string name="play">Play</string>
+    <string name="stop">Stop</string>
+    <string name="audio_config">Config: Default Configuration</string>
+    <string name="audio_config_format">Config: %s</string>
     
     <!-- Status Messages -->
-    <string name="status_ready">准备就绪</string>
-    <string name="status_playing">正在播放…</string>
-    <string name="status_stopped">播放已停止</string>
-    <string name="status_preparing">准备播放…</string>
-    <string name="status_stopping">正在停止…</string>
+    <string name="status_ready">Ready</string>
+    <string name="status_playing">Playing…</string>
+    <string name="status_stopped">Playback Stopped</string>
+    <string name="status_preparing">Preparing to Play…</string>
+    <string name="status_stopping">Stopping…</string>
     
     <!-- File Info -->
-    <string name="file_info">配置文件: /data/audio_configs.json\n支持多种测试文件:\n• /data/48k_2ch_16bit.wav (默认)\n• /data/96k_8ch_24bit.wav (高质量)\n• /data/48k_12ch_16bit.wav (多声道)\n\n支持多通道音频 (1-12声道)\n包括7.1.4 3D音频</string>
+    <string name="file_info">Config File: /data/audio_configs.json\nSupported Test Files:\n• /data/48k_2ch_16bit.wav (Default)\n• /data/96k_8ch_24bit.wav (High Quality)\n• /data/48k_12ch_16bit.wav (Multi-channel)\n\nSupports Multi-channel Audio (1-12 channels)\nIncluding 7.1.4 3D Audio</string>
     
     <!-- Error Messages -->
-    <string name="error_permission_denied">需要音频权限才能播放文件</string>
-    <string name="error_file_not_found">找不到音频文件</string>
-    <string name="error_playback_failed">播放失败</string>
-    <string name="error_unsupported_format">不支持的音频格式</string>
-    <string name="error_unsupported_channels">不支持的声道配置</string>
+    <string name="error_permission_denied">Audio permission required to play files</string>
+    <string name="error_file_not_found">Audio file not found</string>
+    <string name="error_playback_failed">Playback failed</string>
+    <string name="error_unsupported_format">Unsupported audio format</string>
+    <string name="error_unsupported_channels">Unsupported channel configuration</string>
     
     <!-- Permission Messages -->
-    <string name="permission_granted">权限已授予</string>
-    <string name="permission_required">播放音频文件需要存储权限</string>
+    <string name="permission_granted">Permission Granted</string>
+    <string name="permission_required">Storage permission required to play audio files</string>
     
     <!-- Audio Format Info -->
-    <string name="supported_formats">支持格式:\n• 采样率: 8kHz - 192kHz\n• 声道: 1-12声道 (含7.1.4)\n• 位深度: 8/16/24/32bit\n• 3D音频: 5.1.4, 6.1.4, 7.1.4</string>
+    <string name="supported_formats">Supported Formats:\n• Sample Rate: 8kHz - 192kHz\n• Channels: 1-12 channels (including 7.1.4)\n• Bit Depth: 8/16/24/32bit\n• 3D Audio: 5.1.4, 6.1.4, 7.1.4</string>
     
     <!-- Channel Descriptions -->
-    <string name="channel_layout_714">7.1.4声道布局:\n前置: L R C LFE\n环绕: Ls Rs Lrs Rrs\n天空: Ltf Rtf Ltb Rtb</string>
+    <string name="channel_layout_714">7.1.4 Channel Layout:\nFront: L R C LFE\nSurround: Ls Rs Lrs Rrs\nHeight: Ltf Rtf Ltb Rtb</string>
 </resources>
